# qtdesigner-integration

./: README.md
pyqt4-design/: build.sh  clean.sh  configure.py  designer.h  designer.sip  run.py
pyqt5-design/: README.md  build.sh  clean.sh  configure.py  designer.h  designer.sip  pyproject.toml  run.py
qt4-design/: form.cc  form.h  integration.cc  integration.h  sender.cc
qt5-design/: README.md  build.sh  example.ui  form.cc  integration.cc  integration.h  qt5-design.pro
