[build-system]
requires = ["sip >=5", "PyQt-builder", "PyQt5"]
build-backend = "sipbuild.api"
# see pyproject_toml.rst

[tool.sip.metadata]
name = "designer"
requires-dist = "PyQt5"

[tool.sip]
project-factory = "pyqtbuild:PyQtProject"

[tool.sip.project]
abi-version = "12" # important
sip-include-dirs = ["/usr/lib/python3.10/site-packages/PyQt5/bindings", # ArchLinux
                    "/usr/lib64/python3.10/site-packages/PyQt5/bindings"] # Fedora 36
sip-files-dir = "."
build-dir = "_build"

[tool.sip.builder]
qmake = "/usr/bin/qmake-qt5"

[tool.sip.bindings.designer]
sip-file = "designer.sip"
qmake-QT = ["widgets", "designer"]
include-dirs = ["."]
libraries = [ "Qt5DesignerComponents" ]

# https://www.riverbankcomputing.com/static/Docs/PyQt-builder/pyproject_toml.html